--- a/HTML/index_codepen.html
+++ b/HTML/index_codepen.html
@@ -29,16 +29,16 @@
         </div>
         <ul class="header_info_icons_4">
           <li><a href="#" class="header_info_icon">
-              <img src="../img/facebook-f-brands.svg" alt="">
+              <img src="https://raw.githubusercontent.com/Andywang-95/03-18_web_without_flex/8cc301ef00ed9a4f2a620b85a696631bd995b73f/img/facebook-f-brands.svg" alt="">
             </a></li>
           <li><a href="#" class="header_info_icon">
-              <img src="../img/x-twitter-brands.svg" alt="">
+              <img src="https://raw.githubusercontent.com/Andywang-95/03-18_web_without_flex/8cc301ef00ed9a4f2a620b85a696631bd995b73f/img/x-twitter-brands.svg" alt="">
             </a></li>
           <li><a href="#" class="header_info_icon">
-              <img src="../img/youtube-brands.svg" alt="">
+              <img src="https://raw.githubusercontent.com/Andywang-95/03-18_web_without_flex/8cc301ef00ed9a4f2a620b85a696631bd995b73f/img/youtube-brands.svg" alt="">
             </a></li>
           <li><a href="#" class="header_info_icon">
-              <img src="../img/instagram-brands.svg" alt="">
+              <img src="https://raw.githubusercontent.com/Andywang-95/03-18_web_without_flex/8cc301ef00ed9a4f2a620b85a696631bd995b73f/img/instagram-brands.svg" alt="">
             </a></li>
         </ul>
       </div>
@@ -573,16 +573,16 @@
           </p>
           <ul class="footer_logo_icons_4">
             <li><a href="#" class="footer_logo_icon">
-                <img src="../img/facebook-f-brands.svg" alt="">
+                <img src="https://raw.githubusercontent.com/Andywang-95/03-18_web_without_flex/8cc301ef00ed9a4f2a620b85a696631bd995b73f/img/facebook-f-brands.svg" alt="">
               </a></li>
             <li><a href="#" class="footer_logo_icon">
-                <img src="../img/x-twitter-brands.svg" alt="">
+                <img src="https://raw.githubusercontent.com/Andywang-95/03-18_web_without_flex/8cc301ef00ed9a4f2a620b85a696631bd995b73f/img/x-twitter-brands.svg" alt="">
               </a></li>
             <li><a href="#" class="footer_logo_icon">
-                <img src="../img/youtube-brands.svg" alt="">
+                <img src="https://raw.githubusercontent.com/Andywang-95/03-18_web_without_flex/8cc301ef00ed9a4f2a620b85a696631bd995b73f/img/youtube-brands.svg" alt="">
               </a></li>
             <li><a href="#" class="footer_logo_icon">
-                <img src="../img/instagram-brands.svg" alt="">
+                <img src="https://raw.githubusercontent.com/Andywang-95/03-18_web_without_flex/8cc301ef00ed9a4f2a620b85a696631bd995b73f/img/instagram-brands.svg" alt="">
               </a></li>
           </ul>
         </li>
